--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <main role="main" class="inner cover">
         <h1 class="cover-heading">Coming Soon</h1>
-        <p class="lead">Change is the only constant</p>
+        <p class="lead">change is the only constant</p>
     </main>
 
     <footer class="mastfoot mt-auto">
