--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
             background-color: #fff;
             border: .05rem solid #fff;
         }
-
+    
+      body {
+        background-image: url("./Pictures/Super_Main.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
 
         /*
          * Base structure
